# antenna

./: .gitignore  .gitlab-ci.yml  .gitmodules  100s.seed.ttl  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  ontology  seed.ttl  stage1.md  stage2.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benches/: channel_bench.rs  dispatch_bench.rs  store_bench.rs
examples/: echo_pipeline.ttl  enrich_pipeline.ttl  filter_pipeline.ttl  semantic_router.ttl
include/: antenna.h
spin/: theme_resolver.spin.ttl
src/: blocklist.rs  carrier.rs  carrier_tox.rs  channel.rs  dag.rs  dispatch.rs  fd_limit.rs  ffi.rs  lib.rs  llm.rs  logging.rs  main.rs  quickjs_shim.c  script_vm.rs  store.rs  theme.rs  ws.rs
tests/: dag_test.rs  ffi_account_export_round_trip.rs  ffi_account_import.rs  ffi_history_replay.rs  ffi_hot_restart.rs  ffi_panic.rs  ffi_saved_conversation.rs  ffi_smoke.rs  llm_bench.rs  messenger2_block_pipeline_test.rs  messenger2_onboarding_pipeline_test.rs  messenger2_saved_messages_test.rs  messenger2_vcard_pipeline_test.rs  messenger_pipeline_test.rs  pipeline_emit_dispatch_test.rs  pipeline_reload_test.rs  store_on_disk.rs  theme_authoring_pipeline_test.rs  ws_test.rs
