[package]
name = "antenna"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "RDF stream processor with P2P networking, QuickJS scripting, and SPARQL store"
keywords = ["rdf", "turtle", "sparql", "p2p", "streaming"]
categories = ["network-programming", "database"]

[lib]
name = "antenna"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "antenna"
path = "src/main.rs"

[dependencies]
oxigraph = "0.5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
libc = "0.2"
tungstenite = "0.24"
ureq = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
cc = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dispatch_bench"
harness = false

[[bench]]
name = "channel_bench"
harness = false

[[bench]]
name = "store_bench"
harness = false

[profile.release]
lto = true
strip = true
